<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_tickets"
        android:title="@string/tickets"
        android:icon="@drawable/tickets"
        />

    <item
        android:id="@+id/navigation_hotels"
        android:title="@string/hotels"
        android:icon="@drawable/hotels"
        />

    <item
        android:id="@+id/navigation_short_path"
        android:title="@string/short_path"
        android:icon="@drawable/short_path"
        />

    <item
        android:id="@+id/navigation_subscribes"
        android:title="@string/subscribes"
        android:icon="@drawable/subscribes"
        />

    <item
        android:id="@+id/navigation_profile"
        android:title="@string/profile"
        android:icon="@drawable/profile"
        />

</menu>