<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="326dp"
    android:layout_height="90dp"
    android:background="@color/basic_black"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/text_path"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/path"/>

    <TextView
        android:id="@+id/text_path"
        android:layout_width="70dp"
        android:layout_height="34dp"
        app:layout_constraintTop_toBottomOf="@id/path"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:text="@string/path"
        style="@style/Text_14"
        android:textColor="@color/white"
        />

    <ImageView
        android:id="@+id/anywhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/text_anywhere"
        app:layout_constraintEnd_toEndOf="@id/text_anywhere"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/anywhere"/>

    <TextView
        android:id="@+id/text_anywhere"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/path"
        app:layout_constraintStart_toEndOf="@id/text_path"
        android:gravity="center"
        android:text="@string/anywhere"
        style="@style/Text_14"
        android:textColor="@color/white"
        />

    <ImageView
        android:id="@+id/weekends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/text_weekends"
        app:layout_constraintEnd_toEndOf="@id/text_weekends"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/weekends"/>

    <TextView
        android:id="@+id/text_weekends"
        android:layout_width="65dp"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/weekends"
        app:layout_constraintStart_toEndOf="@id/text_anywhere"
        android:gravity="center"
        android:text="@string/weekends"
        style="@style/Text_14"
        android:textColor="@color/white"
        />

    <ImageView
        android:id="@+id/hot_tickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/text_hot_tickets"
        app:layout_constraintEnd_toEndOf="@id/text_hot_tickets"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/hot_tickets"/>

    <TextView
        android:id="@+id/text_hot_tickets"
        android:layout_width="65dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/hot_tickets"
        app:layout_constraintStart_toEndOf="@id/text_weekends"
        android:gravity="center"
        android:text="@string/hot_tickets"
        style="@style/Text_14"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>