<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search"
    android:layout_width="328dp"
    android:layout_height="96dp"
    android:background="@drawable/custom_rectangle_grey_3_16"
    >

    <EditText
        android:id="@+id/departure"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/basic_grey_6"
        android:hint="@string/departure"
        android:background="@android:color/transparent"
        android:textColor="@color/white"
        style="@style/Text_16"
        android:digits="@string/allowed_input_symbols"
        />

    <ImageView
        android:id="@+id/directions_exchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginStart="288dp"
        android:src="@drawable/directions_exchange"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="58dp"
        android:layout_marginStart="288dp"
        android:src="@drawable/close"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="16dp"
        android:background="@color/basic_grey_4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/arrival"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/basic_grey_6"
        android:hint="@string/arrival"
        android:background="@android:color/transparent"
        android:textColor="@color/white"
        style="@style/Text_16"
        android:digits="@string/allowed_input_symbols"
        />
</androidx.constraintlayout.widget.ConstraintLayout>