<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/basic_black"
    android:paddingTop="28dp"
    tools:context=".ui.offers.OffersFragment">
    
    <TextView
        android:id="@+id/screen_title"
        android:layout_width="172dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="52dp"
        app:layout_constraintBaseline_toTopOf="parent"
        android:text="@string/cheap_tickets"
        style="@style/Text_22"
        android:textColor="@color/tickets_grey"
        android:gravity="center"
        />

    <include
        android:id="@+id/search"
        layout="@layout/search"
        android:layout_width="328dp"
        android:layout_height="96dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_title"
        />

    <include
        android:id="@id/items_list"
        layout="@layout/items_list"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@id/list_title"
        app:layout_constraintStart_toStartOf="@id/search"
        app:layout_constraintEnd_toEndOf="@id/search"
        />

    <include
        android:id="@+id/hints"
        layout="@layout/hints"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/search"
        app:layout_constraintEnd_toEndOf="@id/search"
        app:layout_constraintTop_toBottomOf="@id/search"
        android:visibility="gone"
        />

    <include
        android:id="@+id/popular_directions"
        layout="@layout/popular_directions"
        android:layout_width="328dp"
        android:layout_height="216dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/hints"
        app:layout_constraintEnd_toEndOf="@id/hints"
        app:layout_constraintTop_toBottomOf="@id/hints"
        android:visibility="gone"
        />

    <include
        android:id="@+id/ticket_details"
        layout="@layout/ticket_details"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintStart_toStartOf="@id/search"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/list_title"
        android:layout_width="225dp"
        android:layout_height="26dp"
        app:layout_constraintStart_toStartOf="@id/ticket_details"
        app:layout_constraintTop_toBottomOf="@id/ticket_details"
        android:layout_marginTop="28dp"
        android:text="@string/music_travel"
        style="@style/Text_22"
        android:textColor="@color/tickets_grey"
        android:gravity="start"
        />

    <ImageView
        android:id="@+id/left_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/search"
        app:layout_constraintTop_toTopOf="@id/search"
        app:layout_constraintBottom_toBottomOf="@id/search"
        android:layout_marginStart="10dp"
        android:src="@drawable/left_arrow_white"
        android:visibility="gone"
        />
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/watch_all_tickets"
        android:layout_width="328dp"
        android:layout_height="42dp"
        app:layout_constraintTop_toBottomOf="@id/items_list"
        app:layout_constraintStart_toStartOf="@id/items_list"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_rectangle_blue_16"
        android:text="@string/watch_all_tickets"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>